--- a/SNMI/Project.toml
+++ b/SNMI/Project.toml
@@ -1,8 +1,10 @@
 [deps]
 BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
+LinRegOutliers = "6d4de0fb-32d9-4c65-aac1-cc9ed8b94b1a"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
