--- a/ABM/Project.toml
+++ b/ABM/Project.toml
@@ -10,5 +10,6 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SimulatedNeuralMoments = "43b7c8c0-5622-45b8-90a3-338fc50d2232"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Turing = "fce5fe82-541a-59a6-adf8-730c64b5f9a0"
