--- a/DeepSimulatedMomentsExample/Project.toml
+++ b/DeepSimulatedMomentsExample/Project.toml
@@ -5,3 +5,4 @@ Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 MCMCChains = "c7f686f2-ff18-58e9-bc7b-31028e88f75d"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+cuDNN = "02a925ec-e4fe-4b08-9a7e-0d78e3d38ccd"
